# engine

./: .gitignore  Cargo.toml  README.md
crates/application/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: common.rs  error.rs  lib.rs  renderer.rs
crates/engine/src/renderer/: context.rs  utils.rs
crates/engine/src/renderer/context/: debug_messenger.rs  device.rs  instance.rs  resource_manager.rs  shader.rs  surface.rs  sync.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs  macros.rs  utils.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  logging.rs  renderer.rs
engine/src/engine/renderer/: context.rs  utils.rs
engine/src/engine/renderer/context/: instance.rs
game/: Cargo.toml
