[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash" }
ash-window = { git = "https://github.com/ash-rs/ash" }
winit = "0.28.1"
shaderc = "0.8.2"
glam = "0.23.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "smallvec",
    "env-filter",
    "time",
] }
tracing-appender = "0.2"
tracing-tracy = "0.10.2"
time = { version = "0.3.9", features = [
    "local-offset",
    "macros",
    "formatting",
] }
mimalloc = "0.1.34"

[features]
default = ["dev"]
dev = []
editor = []
shipping = []
