[package]
name = "engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Vulkan
ash = { git = "https://github.com/ash-rs/ash" }
shaderc = "0.8.2"

# Windowing
ash-window = { git = "https://github.com/ash-rs/ash" }
winit = "0.28.1"
raw-window-handle = "0.5.1"

# Math
glam = "0.23.0"
mimalloc = "0.1.34"

# Logging and error handling
logging = { path = "../logging/" }
thiserror = "1.0.39"

[features]
default = ["engine", "dev"]
dev = ["logging/dev"]
stable = ["logging/stable"]
shipping = ["logging/shipping"]
profiling = ["logging/profiling"]

# For the logging crate, should be always turned on or logging will be ignored.
engine = []
