[package]
name = "engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Vulkan
ash = { git = "https://github.com/ash-rs/ash" }
shaderc = { git = "https://github.com/google/shaderc-rs", features = [
    "build-from-source",
] }

# Windowing
ash-window = { git = "https://github.com/ash-rs/ash" }
winit = "0.28.1"
raw-window-handle = "0.5.1"

# Data Structures
smallvec = "1.10.0"

# Math
glam = "0.24.0"
mimalloc = "0.1.34"

# Logging and error handling
logging = { path = "../logging/" }
thiserror = "1.0.39"

# Misc
ahash = "0.8.3"
once_cell = { version = "1.17.1", features = ["parking_lot"] }

[features]
default = ["engine", "dev"]
dev = ["logging/dev"]
stable = ["logging/stable"]
shipping = ["logging/shipping"]
profiling = ["logging/profiling"]

# For the logging crate, should be always turned on or logging will be ignored.
engine = []
