[package]
name = "logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "smallvec",
    "env-filter",
    "time",
] }
tracing-appender = "0.2"
tracing-tracy = "0.10.2"
time = { version = "0.3.9", features = [
    "local-offset",
    "macros",
    "formatting",
] }
backtrace = "0.3"

[features]
dev = []
editor = []
shipping = []
profiling = []
